update for flow chain;

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "types": ["jest", "chrome"],
+    "types": ["jest", "chrome", "node"],
     "skipLibCheck": true,
     "declaration": true,
     "target": "ES2020",
