--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@babel/runtime": "^7.17.9",
     "@dimensiondev/metamask-extension-provider": "^3.0.6-20210519045409-1835d4d",
+    "@soda/soda-core-ui": "workspace:^0.0.1",
     "axios": "^0.27.2",
     "lodash-es": "^4.17.21",
     "web3": "^1.4.0",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/chrome": "^0.0.137",
+    "@types/node": "^18.11.11",
     "eslint": "^7.7.0",
     "father-build": "^1.21.2",
     "husky": "^4.3.8",
