--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/runtime": "^7.17.9",
     "@dimensiondev/metamask-extension-provider": "^3.0.6-20210519045409-1835d4d",
     "@soda/soda-core-ui": "workspace:^0.0.1",
+    "@vespaiach/axios-fetch-adapter": "^0.3.1",
     "axios": "^0.27.2",
     "lodash-es": "^4.17.21",
     "web3": "^1.4.0",
